# CloudBooter

./: .cursorignore  .gitignore  CONVENTIONS.md  README.md
.github/: copilot-instructions.md
.github/prompts/: plan-gcpSupport.prompt.md
cloud/GCP/: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_gcp_terraform.ps1  setup_gcp_terraform.sh
cloud/GCP/docs/: FREE_TIER_LIMITS.md  OVERVIEW.md  QUICKSTART.md
cloud/GCP/src/cloudbooter/: __init__.py  __main__.py  auth.py  cli.py  free_tier.py  installer.py  inventory.py  renderers.py
cloud/GCP/tests/: __init__.py  conftest.py  test_e2e_workflow.py  test_free_tier.py  test_integration.py  test_renderers.py
cloud/OCI/: E2E_TESTS_SUMMARY.md  FREE_TIER_LIMITS.md  QUICKSTART.md  README.md  TEST_GUIDE.md  USAGE.md  main.py  pyproject.toml  pytest.ini  run_tests.py  setup_oci_terraform.ps1  setup_oci_terraform.sh  test_parity.py
cloud/OCI/docs/: OVERVIEW.md
cloud/OCI/src/cloudbooter/: __init__.py  __main__.py  cli.py
cloud/OCI/tests/: README.md  __init__.py  conftest.py  test_e2e_workflow.py  test_integration.py  test_renderers.py
helper_scripts/: run_tests.sh
